syntax = "proto3";

package gameInitial;

message GameInitialPacket{
    string deviceId = 1;  
    uint32 playerId = 2;
    float latency = 3;
    double x=4;
    double y=5;  
}